add chart on report page

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/DateTime.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/DateTime.cshtml
@@ -70,7 +70,7 @@
             alert("Start Time must be earlier than End Time.");
         } else {
             chk(FDTS, EDTS);
-            alert("go");
+            alert(FDTS + " " + EDTS);
             //alert(SensorList + " " + FDTS + " " + EDTS);
         }
     }
