--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/_PartialReport.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/_PartialReport.cshtml
@@ -99,7 +99,7 @@
         return this.id;
     }).get();
     var SensorList = list2.join();
-    alert(SensorList);
+    //alert(SensorList);
     $("#test").click((function (e) {
         var FDTS = document.getElementById("StartTime").value;
         var EDTS = document.getElementById("EndTime").value;
