--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/SavedReports/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/SavedReports/Index.cshtml
@@ -27,33 +27,35 @@
         <th>
             @Html.DisplayNameFor(model => model.EndDate)
         </th>
-        <th></th>
+        <th>Export to csv</th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink((string)item.ReportName, "SavedReports", "Reports", new { repName = item.ReportName }, null)
-
-        </td>
-        <td>W
-            @Html.DisplayFor(modelItem => item.ProjectName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomGroupName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BeginDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id=item.SavedReportId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SavedReportId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SavedReportId })*@
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @*@Html.DisplayFor(modelItem => item.ReportName)*@
+                @Html.ActionLink((string)item.ReportName, "SavedReports", "Reports", new { repName = item.ReportName }, null)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProjectName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CustomGroupName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BeginDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndDate)
+            </td>
+            <td>
+                @Html.ActionLink((string)item.ReportName, "Export", "SavedReports", new { repName = item.ReportName }, null)
+                @*@Html.ActionLink("Edit", "Edit", new { id=item.SavedReportId }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.SavedReportId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.SavedReportId })*@
+            </td>
+        </tr>
+    }
 
 </table>
