Fix SavedExport and delete alert code

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/Reports.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/Reports.cshtml
@@ -78,7 +78,7 @@
 Save Report Name:
 <input type="text" class="form-control" id="srName">
 <input type="submit" value="Save" class="btn btn-primary btn-large" id="save" onclick="" />
-<input type="submit" value="Export" class="btn btn-primary btn-large" id="csv" onclick="">
+@*<input type="submit" value="Export" class="btn btn-primary btn-large" id="csv" onclick="">*@
 <table class="table">
     <tr>
         <th>
